# Kl-beton-

./: .gitignore  README.md  TODO.md  create-icon.ps1
backend/: package-lock.json  package.json  prisma.config.ts
backend/prisma/: schema.prisma  seed.js
backend/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
backend/src-tauri/icons/: icon.ic  icon.icns
backend/src-tauri/migrations/: 20240101000000_init.sql  20240327000000_payroll_fields.sql  20240401000000_prets.sql  20240402000000_merit.sql
backend/src-tauri/src/: db.rs  main.rs  models.rs
backend/src-tauri/src/commands/: auth.rs  avances.rs  employes.rs  merit.rs  messages.rs  mod.rs  pointages.rs  prets.rs  rapports.rs  stats.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/forms/: EmployeeForm.jsx
frontend/src/components/layout/: AdminHeader.jsx  AdminSidebar.jsx  ChefNavbar.jsx  QuickActionBar.jsx
frontend/src/components/ui/: Button.jsx  Input.jsx  LanguageSelector.jsx  Modal.jsx  StatsCard.jsx  Table.jsx
frontend/src/contexts/: LanguageContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useAuth.js  useLanguage.js  useMonthLock.js
frontend/src/locales/: dictionary.js
frontend/src/logic/: calculations.js  payroll.js
frontend/src/services/: api.ts  payrollCalculator.js
frontend/src/stores/: authStore.js  avanceStore.js  employeStore.js  meritStore.js  messagesStore.js  pointageStore.js  pretStore.js
frontend/src/utils/: payrollCalculator.js
(+16 files in other folders)
